[package]
name = "rust_robotics_algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
parry3d = "0.25.3"
sif-kdtree = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"
approx = "0.5.1" # Or the latest version

[lib]
name = "kd_tree"
path = "src/pointcloud/kd_tree/kd_tree.rs"

[[bench]]
name = "transform"
harness = false
path = "src/pointcloud/transform/transform_benchmark.rs"

[[bench]]
name = "kd_tree"
harness = false
path = "src/pointcloud/kd_tree/kd_tree_benchmark.rs"